[tool.poetry]
name = "src"
version = "0.0.0"
description = "Python Project Template"
authors = ["HuangFuSL <huangfusl@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pre-commit = "^3.1.0"
pylint = "^2.16.2"
isort = "^5.12.0"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
fail-under = 6
persistent = false
py-version = "3.10"
recursive = true
suggestion-mode = true

[tool.pylint.basic]
good-names-rgxs = "[a-z]"
